attempt travis ci script

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
   - LUA="lua=5.3"
 
 before_install:
-  - pip install hererocks
+  - pip install --user hererocks
   - hererocks lua_install -r^ --$LUA
   - export PATH=$PATH:$PWD/lua_install/bin
 
